Low disk space dialog tokenization
# Conflicts:
#	src/MEGASync/gui/gui.cmake

--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1396,6 +1396,7 @@
         <file alias="folder_users_small">images/themed/common/folders/folder_users_small.svg</file>
         <file alias="export-small-regular-outline">images/themed/common/export-small-regular-outline.svg</file>
         <file alias="x_solid_small">images/themed/tokenizable/x_solid_small.svg</file>
+        <file alias="external_drive_solid_medium.svg">images/themed/tokenizable/external_drive_solid_medium.svg</file>
         <file alias="drive-low-space">images/drive-low-space.svg</file>
         <file alias="search_solid_small">images/themed/tokenizable/search_solid_small.svg</file>
         <file alias="search_small_thin_outline">images/themed/tokenizable/search_small_thin_outline.svg</file>
