Add token to help-circle icon

--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueFilePath.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueFilePath.ui
@@ -339,6 +339,9 @@
              <height>16</height>
             </size>
            </property>
+           <property name="normal_off" stdset="0">
+            <string notr="true">link-primary</string>
+           </property>
           </widget>
          </item>
          <item>
